--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.2.41'
     ext.gson_version = '2.8.1'
     ext.firebase_version = '12.0.1'
+    ext.play_services_version = '12.0.1'
     repositories {
         google()
         jcenter()
