--- a/native_library/android/FirebaseANE/Messaging/build.gradle
+++ b/native_library/android/FirebaseANE/Messaging/build.gradle
@@ -20,6 +20,10 @@ android {
         }
     }
 
+    lintOptions {
+        disable 'GradleDependency','UnusedResources'
+    }
+
 }
 
 dependencies {
