--- a/native_library/android/FirebaseANE/Performance/build.gradle
+++ b/native_library/android/FirebaseANE/Performance/build.gradle
@@ -21,6 +21,10 @@ android {
         }
     }
 
+    lintOptions {
+        disable 'GradleDependency','UnusedResources'
+    }
+
 }
 
 dependencies {
