--- a/native_library/android/FirebaseANE/Messaging/build.gradle
+++ b/native_library/android/FirebaseANE/Messaging/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.google.firebase:firebase-core:$firebase_version"
-    implementation "com.google.firebase:firebase-messaging:$firebase_version"
+    implementation "com.google.firebase:firebase-messaging:17.0.0"
     implementation files('../shared/libs/runtimeClasses.jar')
     implementation files('../shared/libs/FlashRuntimeExtensions.jar')
     implementation files('../shared/libs/frekotlin-1.2.41.jar')
