--- a/native_library/android/FirebaseANE/Performance/build.gradle
+++ b/native_library/android/FirebaseANE/Performance/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.google.firebase:firebase-core:$firebase_version"
-    implementation "com.google.firebase:firebase-perf:$firebase_version"
+    implementation "com.google.firebase:firebase-perf:15.0.0"
     implementation files('../shared/libs/runtimeClasses.jar')
     implementation files('../shared/libs/FlashRuntimeExtensions.jar')
     implementation files('../shared/libs/frekotlin-1.2.41.jar')
