--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -5,12 +5,13 @@ buildscript {
     ext.gson_version = '2.8.1'
     ext.firebase_version = '16.0.0'
     ext.play_services_version = '15.0.1'
+    ext.support_4_version = '27.1.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.0.0'
         // NOTE: Do not place your application dependencies here; they belong
