--- a/native_library/android/FirebaseANE/DynamicLinks/build.gradle
+++ b/native_library/android/FirebaseANE/DynamicLinks/build.gradle
@@ -29,7 +29,5 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.google.firebase:firebase-core:$firebase_version"
     implementation "com.google.firebase:firebase-dynamic-links:$firebase_version"
-    implementation files('../shared/libs/runtimeClasses.jar')
-    implementation files('../shared/libs/FlashRuntimeExtensions.jar')
-    implementation files('../shared/libs/frekotlin-1.2.41.jar')
+    implementation "com.tuarua:FreKotlin:$frekotlin_version"
 }
