--- a/native_library/android/FirebaseANE/Invites/build.gradle
+++ b/native_library/android/FirebaseANE/Invites/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.libVersionCode
+        versionName rootProject.ext.libVersionName
     }
 
     buildTypes {
@@ -23,7 +23,6 @@ android {
         disable 'GradleDependency','UnusedResources'
         abortOnError false
     }
-
 }
 
 dependencies {
@@ -32,7 +31,5 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation "com.google.firebase:firebase-core:$firebase_version"
     implementation "com.google.firebase:firebase-invites:$firebase_version"
-    implementation files('../shared/libs/runtimeClasses.jar')
-    implementation files('../shared/libs/FlashRuntimeExtensions.jar')
-    implementation files('../shared/libs/frekotlin-1.2.41.jar')
+    implementation "com.tuarua:FreKotlin:$frekotlin_version"
 }
