--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.41'
+    ext.frekotlin_version = '1.3.0'
     ext.gson_version = '2.8.1'
     ext.firebase_version = '16.0.0'
     ext.play_services_version = '15.0.1'
@@ -23,9 +24,21 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url  "https://dl.bintray.com/tuarua/maven"
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    targetSdkVersion = 27
+    minSdkVersion = 19
+    compileSdkVersion = targetSdkVersion
+    buildToolsVersion = '27.0.3'
+    libVersionCode = 1
+    libVersionName = '1.0.0'
 }
