--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
-    ext.frekotlin_version = '1.3.0'
-    ext.gson_version = '2.8.1'
+    ext.kotlin_version = '1.2.51'
+    ext.frekotlin_version = '1.4.0-beta1'
+    ext.gson_version = '2.8.4'
     ext.firebase_version = '16.0.0'
     ext.play_services_version = '15.0.1'
     ext.support_4_version = '27.1.0'
