--- a/native_library/android/FirebaseANE/settings.gradle
+++ b/native_library/android/FirebaseANE/settings.gradle
@@ -1,1 +1,1 @@
-include ':Firebase', ':Firestore', ':Auth', ':RemoteConfig', ':Storage', ':Analytics', ':Performance', ':Messaging', ':DynamicLinks', ':GoogleSignIn', ':Invites'
+include ':Firebase', ':Firestore', ':Auth', ':RemoteConfig', ':Storage', ':Analytics', ':Performance', ':Messaging', ':DynamicLinks', ':GoogleSignIn', ':Invites', ':Vision', ':VisionFace', ':VisionBarcode'
