Android crop input, add outline overlay

--- a/native_library/android/FirebaseANE/VisionBarcode/build.gradle
+++ b/native_library/android/FirebaseANE/VisionBarcode/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.libVersionCode
         versionName rootProject.ext.libVersionName
