Android 19.3.0 ktx extensions

--- a/native_library/android/FirebaseANE/Firestore/build.gradle
+++ b/native_library/android/FirebaseANE/Firestore/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.google.firebase:firebase-analytics:$firebase_analytics_version"
-    implementation "com.google.firebase:firebase-firestore:$firebase_firestore_version"
+    implementation "com.google.firebase:firebase-firestore-ktx:$firebase_firestore_version"
     implementation "com.tuarua:FreKotlin:$frekotlin_version"
 }
