--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     ext.frekotlin_version = '1.9.1'
     ext.gson_version = '2.8.6'
+    ext.firebase_common_version = '19.3.0'
     ext.firebase_analytics_version = '17.2.1'
     ext.firebase_core_version = '16.0.5'
     ext.firebase_dynamic_links_version = '19.0.0'
@@ -12,6 +13,7 @@ buildscript {
     ext.firebase_vision_version = '24.0.1'
     ext.firebase_natural_language_version = '22.0.0'
     ext.firebase_model_interpreter_version = '22.0.1'
+    ext.firebase_vision_barcode_model_version = '16.0.2'
     ext.firebase_storage_version = '19.1.0'
     ext.firebase_firestore_version = '21.3.0'
     ext.firebase_auth_version = '19.2.0'
