--- a/native_library/android/FirebaseANE/Auth/build.gradle
+++ b/native_library/android/FirebaseANE/Auth/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.google.firebase:firebase-analytics:$firebase_analytics_version"
     implementation "com.google.firebase:firebase-auth:$firebase_auth_version"
+    implementation "com.google.firebase:firebase-common-ktx:$firebase_common_version"
     implementation "com.tuarua:FreKotlin:$frekotlin_version"
 
 }
