--- a/native_library/android/FirebaseANE/Firebase/build.gradle
+++ b/native_library/android/FirebaseANE/Firebase/build.gradle
@@ -33,6 +33,6 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.firebase:firebase-analytics:$firebase_analytics_version"
-//    implementation 'com.google.firebase:firebase-common-ktx:19.3.0'
+    implementation "com.google.firebase:firebase-common-ktx:$firebase_common_version"
     implementation "com.tuarua:FreKotlin:$frekotlin_version"
 }
