--- a/native_library/android/FirebaseANE/RemoteConfig/build.gradle
+++ b/native_library/android/FirebaseANE/RemoteConfig/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.google.firebase:firebase-analytics:$firebase_analytics_version"
-    implementation "com.google.firebase:firebase-config:$firebase_config_version"
+    implementation "com.google.firebase:firebase-config-ktx:$firebase_config_version"
     implementation "com.tuarua:FreKotlin:$frekotlin_version"
 }
