--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -27,12 +27,16 @@ buildscript {
         maven {
             url 'https://maven.fabric.io/public'
         }
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.28.0'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.7'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -43,7 +47,7 @@ allprojects {
         google()
         jcenter()
         maven {
-            url  "https://dl.bintray.com/tuarua/maven"
+            url "https://dl.bintray.com/tuarua/maven"
         }
         maven {
             url "https://maven.google.com/"
