--- a/native_library/android/FirebaseANE/settings.gradle
+++ b/native_library/android/FirebaseANE/settings.gradle
@@ -1,1 +1,2 @@
 include ':Firebase', ':Firestore', ':Auth', ':RemoteConfig', ':Storage', ':Analytics', ':Performance', ':Messaging', ':DynamicLinks', ':GoogleSignIn', ':Vision', ':VisionFace', ':VisionBarcode', ':VisionText', ':VisionCloudText', ':VisionLabel', ':VisionCloudLabel', ':VisionLandmark', ':Crashlytics', ':VisionCloudDocument', ':NaturalLanguage', ':Modelinterpreter'
+include ':OneSignal'
