--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -1,23 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
-    ext.frekotlin_version = '1.10.0'
+    ext.kotlin_version = '1.4.0'
+    ext.frekotlin_version = '1.40.0-beta'
     ext.gson_version = '2.8.6'
-    ext.firebase_common_version = '19.3.0'
-    ext.firebase_analytics_version = '17.4.4'
+    ext.firebase_common_version = '19.3.1'
+    ext.firebase_analytics_version = '17.5.0'
     ext.firebase_dynamic_links_version = '19.1.0'
     ext.firebase_config_version = '19.2.0'
     ext.firebase_storage_version = '19.1.1'
     ext.firebase_firestore_version = '21.5.0'
     ext.firebase_auth_version = '19.3.2'
     ext.firebase_perf_version = '19.0.8'
-    ext.firebase_messaging_version = '20.2.3'
+    ext.firebase_messaging_version = '20.2.4'
     ext.crashlytics_version = '17.1.1'
     ext.play_services_version = '18.1.0'
     ext.legacy_support_4_version = '1.0.0'
     ext.kotlinx_coroutines_version = '1.3.5'
-    ext.firebase_vision_version = '24.0.3'
+    ext.firebase_vision_version = '24.1.0'
     ext.firebase_model_interpreter_version = '22.0.3'
     repositories {
         google()
