--- a/native_library/android/FirebaseANE/build.gradle
+++ b/native_library/android/FirebaseANE/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.0'
-    ext.frekotlin_version = '1.40.0-beta'
+    ext.frekotlin_version = '1.40.0'
     ext.gson_version = '2.8.6'
     ext.firebase_common_version = '19.3.1'
     ext.firebase_analytics_version = '17.5.0'
@@ -16,8 +16,8 @@ buildscript {
     ext.crashlytics_version = '17.1.1'
     ext.play_services_version = '18.1.0'
     ext.legacy_support_4_version = '1.0.0'
-    ext.kotlinx_coroutines_version = '1.3.5'
-    ext.firebase_vision_version = '24.1.0'
+    ext.kotlinx_coroutines_version = '1.3.9'
+    ext.firebase_vision_version = '24.0.3'
     ext.firebase_model_interpreter_version = '22.0.3'
     repositories {
         google()
