--- a/native_extension/DynamicLinksANE/ane/InfoAdditions.plist
+++ b/native_extension/DynamicLinksANE/ane/InfoAdditions.plist
@@ -7,8 +7,8 @@
         <dict>
             <key>CFBundleURLSchemes</key>
             <array>
-                <string>${firebaseUrlSchemeName}</string>
-                <string>${firebaseUrlSchemeUrl}</string>
+                <string>${firebase_scheme_name}</string>
+                <string>${firebase_scheme_url}</string>
             </array>
         </dict>
     </array>
